--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,7 @@
 
 \title{To Do List}
 \author{Santiago Uribe Pastás}
-\date{Mayo 2021}
+\date{2021}
 
 \begin{document}
 
@@ -13,7 +13,9 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Prueba
+    \item Revisar algoritmo NETINF
+    \item Revisar las librerias Surprise (Recomendaciones) y Nimfa (MF)
+    \item Buscar mas trabajos relacionados
 \end{itemize}
 
 \end{document}
