Actualizacion tareas por hacer

--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Revisar algoritmo NETINF
-    \item Revisar las librerias Surprise (Recomendaciones) y Nimfa (MF)
+    \item Entender el formato de las cascadas de netinf
+    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita
     \item Buscar mas trabajos relacionados
 \end{itemize}
 
