Actualizacion tareas por hacer 26/8/21

--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,9 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Entender el formato de las cascadas de netinf
-    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita
+    \item Propuestas para inferir redes con los datos que tenemos
+    \item Investigar acerca del formato de las cascadas para netinf
+    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita (como colapsar el grafo? modelos hechos en neo4j)
     \item Buscar mas trabajos relacionados
 \end{itemize}
 
