To do List update

--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,8 @@
 \begin{itemize}
     \item Propuestas para inferir redes con los datos que tenemos
     \item Investigar acerca del formato de las cascadas para netinf
-    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita (como colapsar el grafo? modelos hechos en neo4j)
+    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita (o crear el grafo usando nodos pares e impares para los 2 tipos de nodos)
+    \item Como colapsar el grafo bipartito? neo4j, networkx (hay error), snap
     \item Buscar mas trabajos relacionados
 \end{itemize}
 
