To do List update

--- a/main.tex
+++ b/main.tex
@@ -14,9 +14,8 @@
 \section{Tareas Pendientes}
 \begin{itemize}
     \item Propuestas para inferir redes con los datos que tenemos
-    \item Investigar acerca del formato de las cascadas para netinf
-    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita (o crear el grafo usando nodos pares e impares para los 2 tipos de nodos)
-    \item Como colapsar el grafo bipartito? neo4j, networkx (hay error), snap
+    \item Exportar los modelos del grafo colapsado en Neo4j (como un archivo plano) para crear las cascadas (teniendo en cuenta el csv) y probar netinf
+    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita
     \item Buscar mas trabajos relacionados
 \end{itemize}
 
