NETINF test with MovieLens data

--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,7 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Propuestas para inferir redes con los datos que tenemos
-    \item Exportar los modelos del grafo colapsado en Neo4j (como un archivo plano) para crear las cascadas (teniendo en cuenta el csv) y probar netinf
-    \item Revisar la clase TBPGraph de SNAP para crear la red bipartita
+    \item Usar la proyeccion del grafo con respecto a los usaurios como parametro del algoritmo NETINF
     \item Buscar mas trabajos relacionados
 \end{itemize}
 
