To do List update

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,7 @@
 \section{Tareas Pendientes}
 \begin{itemize}
     \item Usar la proyeccion del grafo con respecto a los usaurios como parametro del algoritmo NETINF
+    \item Cambiar anteproyecto
     \item Buscar mas trabajos relacionados
 \end{itemize}
 
