To do List update

--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Usar la proyeccion del grafo con respecto a los usaurios como parametro del algoritmo NETINF
-    \item Cambiar anteproyecto
+    \item Usar la proyeccion del grafo con respecto a los usuarios como parametro del algoritmo NETINF
+    \item Cambiar anteproyecto (quitar libreria de python como entregable y lo de varios algoritmos de inferencia de redes sociales)
     \item Buscar mas trabajos relacionados
 \end{itemize}
 
