To do list update

--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Terminar de sacar las medidas topologicas de la proyeccion del grafo (documentar resultados).
+    \item Leer la clase TBPGraph para ver como hacer la proyeccion del grafo con SNAP.
     \item Sacar medidas topologicas de la red inferida (documentar resultados).
-    \item Escribir ``Proyeccion de un Grafo'' en el marco teorico.
     \item Usar la proyeccion del grafo con respecto a los usuarios como parametro del algoritmo NETINF.
     \item Cambiar anteproyecto (quitar libreria de python como entregable y lo de varios algoritmos de inferencia de redes sociales).
     \item Buscar mas trabajos relacionados.
