To do list update

--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Leer la clase TBPGraph para ver como hacer la proyeccion del grafo con SNAP.
-    \item Sacar medidas topologicas de la red inferida (documentar resultados).
-    \item Usar la proyeccion del grafo con respecto a los usuarios como parametro del algoritmo NETINF.
+    \item Escoger la red a inferir
+    \item Extraer porpiedades topologicas de la red inferida (documentar resultados).
     \item Cambiar anteproyecto (quitar libreria de python como entregable y lo de varios algoritmos de inferencia de redes sociales).
     \item Buscar mas trabajos relacionados.
 \end{itemize}
