--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Escoger la red a inferir
+    \item Añadir el calculo de \textit{Eigenvector Centrality} en la funcion de medidas topologicas.
+    \item Escoger la red a inferir.
     \item Extraer porpiedades topologicas de la red inferida (documentar resultados).
     \item Cambiar anteproyecto (quitar libreria de python como entregable y lo de varios algoritmos de inferencia de redes sociales).
     \item Buscar mas trabajos relacionados.
