To do list update

--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Añadir subgrafo inducido al marco teorico.
-    \item Escoger la red a inferir.
+    \item Revisar Betweenness de la red inferida (valores anormales), hacerlo manualmente y en Gephi
+    \item Escoger la red inferida.
     \item Extraer porpiedades topologicas de la red inferida (documentar resultados).
     \item Cambiar anteproyecto (quitar libreria de python como entregable y lo de varios algoritmos de inferencia de redes sociales).
     \item Buscar mas trabajos relacionados.
