To do list update

--- a/main.tex
+++ b/main.tex
@@ -13,11 +13,10 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Revisar Betweenness de la red inferida (valores anormales), hacerlo manualmente y en Gephi
-    \item Escoger la red inferida.
-    \item Extraer porpiedades topologicas de la red inferida (documentar resultados).
-    \item Cambiar anteproyecto (quitar libreria de python como entregable y lo de varios algoritmos de inferencia de redes sociales).
-    \item Buscar mas trabajos relacionados.
+    \item Buscar mas trabajos relacionados. Añadir la investigacion de los otros algoritmos para inferencia de redes sociales (modelo probabilisto Bayesiano en comun)
+    \item Normalizar el calculo del Betweenness
+    \item Escoger la red inferida y extraer propiedades topologicas de la red (documentar resultados).
+    \item Cambiar anteproyecto
 \end{itemize}
 
 \end{document}
