--- a/main.tex
+++ b/main.tex
@@ -13,10 +13,9 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Buscar mas trabajos relacionados. Añadir la investigacion de los otros algoritmos para inferencia de redes sociales (modelo probabilisto Bayesiano en comun)
-    \item Normalizar el calculo del Betweenness
-    \item Escoger la red inferida y extraer propiedades topologicas de la red (documentar resultados).
-    \item Cambiar anteproyecto
+    \item Tomar medidas y la distribucion de la variable objetivo (valoracion de peliculas) del conjunto de datos. Ver ejemplos de Kaggle.
+    \item Añadir a trabajos relacionados la investigacion de los otros algoritmos para inferencia de redes sociales.
+    \item Para cada metodo de NETINF (exponential, powerlaw, rayleigh) escoger 3 o 4 modelos de redes sociales inferidas y sacar sus medidas topologicas (documentar resultados y graficas).
 \end{itemize}
 
 \end{document}
