To do List Update

--- a/main.tex
+++ b/main.tex
@@ -13,8 +13,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Tomar medidas y la distribucion de la variable objetivo (valoracion de peliculas) del conjunto de datos. Ver ejemplos de Kaggle.
-    \item Añadir a trabajos relacionados la investigacion de los otros algoritmos para inferencia de redes sociales.
+    \item Añadir al marco teorico el nuevo algoritmo de factorizacion matricial (CMF).
+    \item Volver a sacar las medidas topologicas del grafo proyectado en usuarios, pues se cambio el dataset.
     \item Para cada metodo de NETINF (exponential, powerlaw, rayleigh) escoger 3 o 4 modelos de redes sociales inferidas y sacar sus medidas topologicas (documentar resultados y graficas).
 \end{itemize}
 
