To do List Update

--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \section{Tareas Pendientes}
 \begin{itemize}
     \item Añadir al marco teorico el nuevo algoritmo de factorizacion matricial (CMF).
-    \item Para cada metodo de NETINF (exponential, powerlaw, rayleigh) escoger 3 o 4 modelos de redes sociales inferidas y sacar sus medidas topologicas (documentar resultados y graficas).
+    \item Hacer la recomendacion usando las medidas topologicas de los 6 modelos.
 \end{itemize}
 
 \end{document}
