To do List Update

--- a/main.tex
+++ b/main.tex
@@ -12,6 +12,8 @@
 \section{Tareas Pendientes}
 \begin{itemize}
     \item Añadir al marco teorico el nuevo algoritmo de factorizacion matricial (CMF).
+    \item Agregar mas modelos para poder visualizar los resultados en una tabla de colores, y asi ver cuanto mejora el algoritmo de ML variando el parametro $\alpha$.
+    \item Agregar grafica de las predicciones, valores reales vs valores predichos.
     \item Utlizar shap para ver que atributos son mas relevantes en la recomendacion.
 \end{itemize}
 
