--- a/main.tex
+++ b/main.tex
@@ -11,10 +11,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Añadir al marco teorico el nuevo algoritmo de factorizacion matricial (CMF).
-    \item Agregar mas modelos para poder visualizar los resultados en una tabla de colores, y asi ver cuanto mejora el algoritmo de ML variando el parametro $\alpha$.
-    \item Agregar grafica de las predicciones, valores reales vs valores predichos.
-    \item Utlizar shap para ver que atributos son mas relevantes en la recomendacion.
+    \item Añadir al marco teorico el nuevo algoritmo de factorizacion matricial (CMF) y las nuevas medidas de grafo.
+    \item Terminar el documento (capitulo de la implementacion y las conclusiones).
 \end{itemize}
 
 \end{document}
