To Do List Update

--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,8 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Añadir al marco teorico el nuevo algoritmo de factorizacion matricial (CMF) y las nuevas medidas de grafo.
-    \item Terminar el documento (capitulo de la implementacion y las conclusiones).
+    \item Añadir al marco teorico las nuevas medidas de grafo (ecuaciones).
+    \item Terminar el documento (conclusiones).
 \end{itemize}
 
 \end{document}
