--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,7 @@
 
 \section{Tareas Pendientes}
 \begin{itemize}
-    \item Añadir al marco teorico las nuevas medidas de grafo (ecuaciones).
-    \item Terminar el documento (conclusiones).
+    \item Revisar el documento con los directores.
 \end{itemize}
 
 \end{document}
